--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 anyhow = "1.0.81"
 chrono = "0.4.35"
 clap = { version = "4.5.3", features = ["derive"] }
+colored = "2.1.0"
 humantime = "2.1.0"
+rand = "0.8.5"
